-
Bug
-
Resolution: Fixed
-
Major
-
None
-
3
-
9223372036854775807
Apr 23 15:10:01 lola-8 kernel: LustreError: 4286:0:(lod_object.c:572:lod_striped_it_next()) ASSERTION( next->do_index_ops != ((voi
d *)0) ) failed:
Apr 23 15:10:01 lola-8 kernel: LustreError: 4286:0:(lod_object.c:572:lod_striped_it_next()) LBUG
Apr 23 15:10:01 lola-8 kernel: Pid: 4286, comm: mdt01_000
Apr 23 15:10:01 lola-8 kernel:
Apr 23 15:10:01 lola-8 kernel: Call Trace:
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa0681875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa0681e77>] lbug_with_loc+0x47/0xb0 [libcfs]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa11da6b4>] lod_striped_it_next+0x4c4/0x620 [lod]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa11d9319>] ? lod_striped_it_get+0x139/0x280 [lod]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa123db9b>] mdd_may_delete+0x4eb/0x920 [mdd]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa123e015>] mdd_unlink_sanity_check+0x45/0x100 [mdd]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa125384d>] ? mdd_la_get+0xad/0x230 [mdd]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa12465f6>] mdd_unlink+0x236/0xe60 [mdd]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa0f84754>] ? osd_xattr_get+0x84/0x2a0 [osd_ldiskfs]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa1113bc8>] mdo_unlink+0x18/0x50 [mdt]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa111c5e7>] mdt_reint_unlink+0x9a7/0x1080 [mdt]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa07fca50>] ? lu_ucred+0x20/0x30 [obdclass]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa10f4d65>] ? mdt_ucred+0x15/0x20 [mdt]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa1113c5d>] mdt_reint_rec+0x5d/0x200 [mdt]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa10f8fbb>] mdt_reint_internal+0x4cb/0x7a0 [mdt]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa10f972b>] mdt_reint+0x6b/0x120 [mdt]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa0a5fa9e>] tgt_request_handle+0x8be/0x1000 [ptlrpc]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa0a0fa51>] ptlrpc_main+0xe41/0x1960 [ptlrpc]
Apr 23 15:10:01 lola-8 kernel: [<ffffffffa0a0ec10>] ? ptlrpc_main+0x0/0x1960 [ptlrpc]
Apr 23 15:10:01 lola-8 kernel: [<ffffffff8109e66e>] kthread+0x9e/0xc0
Apr 23 15:10:01 lola-8 kernel: [<ffffffff8100c20a>] child_rip+0xa/0x20
Apr 23 15:10:01 lola-8 kernel: [<ffffffff8109e5d0>] ? kthread+0x0/0xc0
Apr 23 15:10:01 lola-8 kernel: [<ffffffff8100c200>] ? child_rip+0x0/0x20
Apr 23 15:10:01 lola-8 kernel: