lustre/lod/lod_object.c
@@ -563,12 +563,13 @@ again:
 	next->do_index_ops->dio_it.put(env, it->lit_it);
 	next->do_index_ops->dio_it.fini(env, it->lit_it);
 
+	next = lo->ldo_stripe[it->lit_stripe_index];
+	LASSERT(next != NULL);
+
 	rc = next->do_ops->do_index_try(env, next, &dt_directory_features);
 	if (rc != 0)
 		RETURN(rc);
 
-	next = lo->ldo_stripe[it->lit_stripe_index];
-	LASSERT(next != NULL);
 	LASSERT(next->do_index_ops != NULL);
 
 	it_next = next->do_index_ops->dio_it.init(env, next, it->lit_attr);
